fixed navigation on smaller screens

--- a/assets:css/style.css
+++ b/assets:css/style.css
@@ -75,6 +75,7 @@ h1 {
     justify-content: center;
     margin-top: -50px;
     z-index: 2;
+    margin-left: 198px;
 }
 
 .navigation ul {
